--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
     tools:context=".views.MainActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
+    <uk.co.deanwild.flowtextview.FlowTextView
+        android:id="@+id/peruna"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
+
+   <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
     <TextView
