--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -14,4 +14,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:background="@android:color/transparent"
         android:alpha="0.0"/>
+    <Button
+        android:id="@+id/index_page_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@android:color/transparent"
+        android:alpha="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
