--- a/app/src/main/res/layout/content_preview.xml
+++ b/app/src/main/res/layout/content_preview.xml
@@ -23,7 +23,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="@string/preview_page_button"
+        android:width="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/settingsPageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/settings_button"
+        android:width="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
