--- a/app/src/main/res/layout/content_preview.xml
+++ b/app/src/main/res/layout/content_preview.xml
@@ -28,6 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
+        android:transitionName="aa"
         android:id="@+id/settingsPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
