--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -29,6 +29,17 @@
             app:key="exhibition_device"
             app:title="@string/exhibition_device_perference_title" />
 
+        <EditTextPreference
+            app:summary="@string/exhibition_perference_not_set"
+            app:key="rfid_device"
+            app:title="@string/exhibition_rfid_perference_title"/>
+
+        <EditTextPreference
+            app:summary="@string/exhibition_perference_not_set"
+            app:title="@string/exhibition_rfid_antenna_perference_title"
+            android:inputType="number"
+            app:key="rfid_antenna" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
