--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|center_vertical" />
 
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom|end"
+        android:background="@android:color/transparent"
+        android:alpha="0.0"/>
 </FrameLayout>
