--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.github.rongi.rotate_layout.layout.RotateLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".views.PageActivity">
-    <Button
-        android:id="@+id/settings_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@android:color/transparent"
-        android:alpha="0.0"/>
-    <Button
-        android:id="@+id/index_page_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@android:color/transparent"
-        android:alpha="0.0"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:angle="90">	<!-- Specify rotate angle here -->
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".views.PageActivity">
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@android:color/transparent"
+            android:alpha="0.0"/>
+        <Button
+            android:id="@+id/index_page_button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@android:color/transparent"
+            android:alpha="0.0"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.github.rongi.rotate_layout.layout.RotateLayout>
