--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".views.MainActivity" >
 
     <Button
@@ -17,18 +18,52 @@
         android:background="@android:color/transparent"
         android:alpha="0.0"/>
 
-    <ProgressBar
+    <!--<ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|center_vertical" />
+        android:layout_gravity="center|center_vertical" /> -->
+    <!--<com.github.rongi.rotate_layout.layout.RotateLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:angle="90"> -->
+<RelativeLayout
+    android:layout_gravity="center"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    >
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/muistilogo" />
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/image"
+        android:textSize="24dp"
+        android:fontFamily=""
+        android:textAllCaps="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="300dp"
+        android:textFontWeight="600"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:text="Tule ja tutustu näyttelypisteeseen" />
+</RelativeLayout>
+    <!--</com.github.rongi.rotate_layout.layout.RotateLayout>-->
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="bottom|end"
-        android:background="@android:color/transparent"
-        android:alpha="0.0"/>
-</FrameLayout>
+
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom|end"
+            android:background="@android:color/transparent"
+            android:alpha="0.0"/>
+    </FrameLayout>
