--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -16,5 +16,18 @@
             android:layout_width="200dp"
             android:layout_gravity="center"
             android:text="@string/exhibition_perference_save" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginVertical="15dp"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:text="Display Metrics"/>
+        <ListView
+            android:id="@+id/display_metrics"
+            android:paddingHorizontal="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="280dp" />
     </LinearLayout>
 </ScrollView>
