--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,42 +24,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center|center_vertical" /> -->
-    <!--<com.github.rongi.rotate_layout.layout.RotateLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.github.rongi.rotate_layout.layout.RotateLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:id="@+id/main_screen_rotate"
         android:layout_height="match_parent"
-        app:angle="90"> -->
-<RelativeLayout
-    android:layout_gravity="center"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    >
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/muistilogo" />
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/image"
-        android:textSize="24sp"
-        android:fontFamily=""
-        android:textAllCaps="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="300dp"
-        android:textFontWeight="600"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="@string/intro_text" />
-</RelativeLayout>
-    <!--</com.github.rongi.rotate_layout.layout.RotateLayout>-->
-
-
-
+        app:angle="0">
+        <RelativeLayout
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+        >
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/muistilogo" />
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/image"
+            android:textSize="24sp"
+            android:fontFamily=""
+            android:textAllCaps="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="300dp"
+            android:textFontWeight="600"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:text="@string/intro_text" />
+        </RelativeLayout>
+    </com.github.rongi.rotate_layout.layout.RotateLayout>
         <Button
             android:id="@+id/login_button"
             android:layout_width="100dp"
