--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,7 @@
         android:background="@android:color/transparent"
         android:alpha="0.0"/>
 
-    <!--<ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|center_vertical" /> -->
-    <com.github.rongi.rotate_layout.layout.RotateLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.github.rongi.rotate_layout.layout.RotateLayout
         android:layout_width="match_parent"
         android:id="@+id/main_screen_rotate"
         android:layout_height="match_parent"
@@ -58,11 +50,11 @@
             android:text="@string/intro_text" />
         </RelativeLayout>
     </com.github.rongi.rotate_layout.layout.RotateLayout>
-        <Button
-            android:id="@+id/login_button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="bottom|end"
-            android:background="@android:color/transparent"
-            android:alpha="0.0"/>
-    </FrameLayout>
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom|end"
+        android:background="@android:color/transparent"
+        android:alpha="0.0"/>
+</FrameLayout>
