--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -28,5 +28,13 @@
         app:layout_constraintRight_toRightOf="parent"
         android:background="@android:color/transparent"
         android:alpha="0.0"/>
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@android:color/transparent"
+        android:alpha="0.0"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.github.rongi.rotate_layout.layout.RotateLayout>
