Added forced portrait rotation option.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -36,6 +36,10 @@
             android:enabled="false"
             app:key="rfid_antennas" />
 
+        <CheckBoxPreference
+            app:title="@string/flip_forced_rotation_title"
+            app:key="flip_forced_rotation" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
