--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -12,6 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.PageActivity">
+        <TextView
+            android:id="@+id/logout_warning"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:elevation="5dp"
+            android:layout_margin="10dp"
+            android:maxWidth="300dp"
+            android:background="@color/black_overlay"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textAllCaps="true"
+            android:text="@string/logout_warning"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
     <Button
         android:id="@+id/settings_button"
         android:layout_width="30dp"
